test/compile-errors/string-literal-invalid.crow
main void()
	info log "a\0b"
	info log "{"a\0b"::symbol}"
